# git-reporter-ai

./: CONTRIBUTING.md  MANIFEST.in  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  example-config.yaml  git-reporter.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: index.md
docs/about/: changelog.md
docs/advanced/: config-priority.md  custom-dates.md  remote-repositories.md
docs/development/: project-structure.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: config-schema.md  example-config.md  troubleshooting.md
docs/user-guide/: ai-providers.md  cli-commands.md  report-periods.md  usage-examples.md
src/git_reporter/: cli.py  git_analyzer.py  models.py  report_generator.py
src/git_reporter/ai/: __init__.py  base.py  gemini_provider.py  openai_provider.py
src/git_reporter/config/: __init__.py  manager.py
src/git_reporter_ai/: __init__.py  cli.py  git_analyzer.py  models.py
src/git_reporter_ai/ai/: gemini_provider.py
src/git_reporter_ai/config/: manager.py
