[project]
name = "git-reporter"
version = "0.1.0"
description = "AI-Powered Git commit history analyzer and report generator"
readme = "README.md"
authors = [
    { name = "Xianpeng Shen", email = "xianpeng.shen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.43",
    "pydantic>=2.10.0",
    "pydantic-ai>=0.0.15",
    "openai>=1.58.0",
    "google-generativeai>=0.8.0",
    "click>=8.1.7",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.0",
    "rich>=13.9.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "commit", "history", "report", "ai", "openai", "gemini"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/shenxianpeng/git-reporter"
Documentation = "https://shenxianpeng.github.io/git-reporter/"
Repository = "https://github.com/shenxianpeng/git-reporter"
Issues = "https://github.com/shenxianpeng/git-reporter/issues"

[project.scripts]
git-reporter = "git_reporter.cli:main"

[project.entry-points."git_reporter.ai_providers"]
openai = "git_reporter.ai.openai_provider:OpenAIProvider"
gemini = "git_reporter.ai.gemini_provider:GeminiProvider"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
